crimea rework integrated

--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+ ####################
+ # Venice
+ ####################
  #Missions
  X_VEN_mission_1_title:0 "Revoke the Treaty of Zara"
  X_VEN_mission_1_desc:0 ""
@@ -86,55 +89,55 @@
  X_VEN_mission_30_tt:0 "§Y[Root.GetName]§! cannot get the §YSalt Crisis§! event."
  #Event Modifiers
  X_VEN_monopolio_adriatico_pmod:0 "Monopolio Adriatico"
- X_VEN_monopolio_adriatico_pmod_desc:0 ""
+ desc_X_VEN_monopolio_adriatico_pmod:0 ""
  X_VEN_mercantile_system_cmod:0 "Mercantile System"
- X_VEN_mercantile_system_cmod_desc:0 ""
+ desc_X_VEN_mercantile_system_cmod:0 ""
  X_VEN_basilica_di_san_biagio_pmod:0 "Basilica di San Biagio"
- X_VEN_basilica_di_san_biagio_pmod_desc:0 ""
+ desc_X_VEN_basilica_di_san_biagio_pmod:0 ""
  X_VEN_reduced_ottoman_meddling_cmod:0 "Reduced Ottoman Meddling"
- X_VEN_reduced_ottoman_meddling_cmod_desc:0 ""
+ desc_X_VEN_reduced_ottoman_meddling_cmod:0 ""
  X_VEN_curtailed_albanian_piracy_cmod:0 "Curtailed Albanian Piracy"
- X_VEN_curtailed_albanian_piracy_cmod_desc:0 ""
+ desc_X_VEN_curtailed_albanian_piracy_cmod:0 ""
  X_VEN_armada_cmod:0 "Armada"
- X_VEN_armada_cmod_desc:0 ""
+ desc_X_VEN_armada_cmod:0 ""
  X_VEN_contrafossa_pmod:0 "Contrafossa"
- X_VEN_contrafossa_pmod_desc:0 ""
+ desc_X_VEN_contrafossa_pmod:0 ""
  X_VEN_generale_da_mar_cmod:0 "Generale da Mar"
- X_VEN_generale_da_mar_cmod_desc:0 ""
+ desc_X_VEN_generale_da_mar_cmod:0 ""
  X_VEN_bulwark_of_europe_pmod:0 "Bulwark of Europe"
- X_VEN_bulwark_of_europe_pmod_desc:0 ""
+ desc_X_VEN_bulwark_of_europe_pmod:0 ""
  X_VEN_morean_development_pmod:0 "Morean Development"
- X_VEN_morean_development_pmod_desc:0 ""
+ desc_X_VEN_morean_development_pmod:0 ""
  X_VEN_renewed_viticulure_pmod:0 "Renewed Viticulture"
- X_VEN_renewed_viticulure_pmod_desc:0 ""
+ desc_X_VEN_renewed_viticulure_pmod:0 ""
  X_VEN_greek_ambition_cmod:0 "Greek Ambition"
- X_VEN_greek_ambition_cmod_desc:0 ""
+ desc_X_VEN_greek_ambition_cmod:0 ""
  X_VEN_walls_of_nicosia_pmod:0 "Walls of Nicosia"
- X_VEN_walls_of_nicosia_pmod_desc:0 ""
+ desc_X_VEN_walls_of_nicosia_pmod:0 ""
  X_VEN_port_of_famagusta_pmod:0 "Port of Famagusta"
- X_VEN_port_of_famagusta_pmod_desc:0 ""
+ desc_X_VEN_port_of_famagusta_pmod:0 ""
  X_VEN_cypriot_sammet_pmod:0 "Cypriot Sammet"
- X_VEN_cypriot_sammet_pmod_desc:0 ""
+ desc_X_VEN_cypriot_sammet_pmod:0 ""
  X_VEN_venetokratia_cmod:0 "Venetokratia"
- X_VEN_venetokratia_cmod_desc:0 ""
+ desc_X_VEN_venetokratia_cmod:0 ""
  X_VEN_ottomans_defeated_cmod:0 "Ottomans Defeated"
- X_VEN_ottomans_defeated_cmod_desc:0 ""
+ desc_X_VEN_ottomans_defeated_cmod:0 ""
  X_VEN_innovative_tactics_cmod:0 "Innovative Tactics"
- X_VEN_innovative_tactics_cmod_desc:0 ""
+ desc_X_VEN_innovative_tactics_cmod:0 ""
  X_VEN_galilean_ballistics_cmod:0 "Galilean Ballistics"
- X_VEN_galilean_ballistics_cmod_desc:0 ""
+ desc_X_VEN_galilean_ballistics_cmod:0 ""
  X_VEN_magistrato_al_sal_cmod:0 "Magistrato al Sal"
- X_VEN_magistrato_al_sal_cmod_desc:0 ""
+ desc_X_VEN_magistrato_al_sal_cmod:0 ""
  X_VEN_preservation_of_classics_cmod:0 "Preservation of Classics"
- X_VEN_preservation_of_classics_cmod_desc:0 ""
+ desc_X_VEN_preservation_of_classics_cmod:0 ""
  X_VEN_cretan_literature_cmod:0 "Cretan Literature"
- X_VEN_cretan_literature_cmod_desc:0 ""
+ desc_X_VEN_cretan_literature_cmod:0 ""
  X_VEN_center_of_greek_arts_pmod:0 "Center of Greek Arts"
- X_VEN_center_of_greek_arts_pmod_desc:0 ""
+ desc_X_VEN_center_of_greek_arts_pmod:0 ""
  X_VEN_new_advisement_cmod:0 "New Advisement"
- X_VEN_new_advisement_cmod_cmod:0 ""
+ desc_X_VEN_new_advisement_cmod:0 ""
  X_VEN_venetian_marines_cmod:0 "Venetian Marines"
- X_VEN_venetian_marines_cmod_desc:0 ""
+ desc_X_VEN_venetian_marines_cmod:0 ""
  #Events
  X_VEN_events.1.t:0 "The Balkan Latin Republic"
  X_VEN_events.1.d1:0 ""
@@ -169,3 +172,80 @@
  #Miscellaneous
  merc_X_VEN_stratioti:0 "Stratioti"
  X_VEN_ordo_salis:0 "Ordo Salis"
+ ####################
+ # Crimea
+ ####################
+ X_CRI_crimean_khanate_reform:0 "Crimean Khanate"
+ X_CRI_crimean_khanate_reform_desc:0 "The Crimean Khanate proclaims its rulers to be sons of Genghis Khan, who trace their legitimacy to this royal descent." 
+ X_CRI_great_khan:0 "Great Khan"
+ X_CRI_crimean_khanate:0 "Crimean Khanate"
+ X_CRI_crimean_khanate_desc:0 ""
+ #Decrees
+ X_CRI_decree_1:0 "Promote Urbanization"
+ X_CRI_decree_1_title:0 "Promote Urbanization"
+ X_CRI_decree_1_desc:0 ""
+ X_CRI_decree_2:0 "Sponsor Slave Raids"
+ X_CRI_decree_2_title:0 "Sponsor Slave Raids"
+ X_CRI_decree_2_desc:0 ""
+ X_CRI_decree_3:0 "Patronize Tatar Literature"
+ X_CRI_decree_3_title:0 "Patronize Tatar Literature"
+ X_CRI_decree_3_desc:0 ""
+ X_CRI_decree_4:0 "Issue Yarlig"
+ X_CRI_decree_4_title:0 "Issue Yarlig"
+ X_CRI_decree_4_desc:0 ""
+ X_CRI_decree_5:0 "Expand the Steppe"
+ X_CRI_decree_5_title:0 "Expand the Steppe"
+ X_CRI_decree_5_desc:0 ""
+ X_CRI_decree_6:0 "Secure Clan Allegiance"
+ X_CRI_decree_6_title:0 "Secure Clan Allegiance"
+ X_CRI_decree_6_desc:0 ""
+ #Monuments
+ X_CRI_hansaray:0 "Hansaray"
+ X_CRI_hansaray_title:0 "Hansaray"
+ great_project_X_CRI_hansaray:0 "Hansaray"
+ #Reforms
+ X_CRI_reform_1:0 "Reinforce Genghisid Rule"
+ X_CRI_reform_1_title:0 "Reinforce Genghisid Rule"
+ X_CRI_reform_1_emperor:0 "Reinforce Genghisid Rule"
+ X_CRI_reform_1_desc:0 ""
+ X_CRI_reform_2:0 "Confirm Qalga Succession"
+ X_CRI_reform_2_title:0 "Confirm Qalga Succession"
+ X_CRI_reform_2_emperor:0 "Confirm Qalga Succession"
+ X_CRI_reform_2_desc:0 ""
+ X_CRI_reform_2_tt:0 "§WThe Great Khan and his heirs are more likely to be §YHumane§!.§!"
+ X_CRI_reform_2_tt2:0 "§WThe Great Khan and his heirs are no longer more likely to be §YHumane§!.§!"
+ X_CRI_reform_3:0 "Enhance Development"
+ X_CRI_reform_3_title:0 "Enhance Development"
+ X_CRI_reform_3_desc:0 ""
+ X_CRI_reform_3_tt:0 "§WEvery owned province of §YSteppes§! terrain gains §Y'Steppes Development'§!, giving the following effects:\nLocal Development Cost: §G-10.0%§!§!"
+ X_CRI_reform_3_tt2:0 "Remove §Y'Steppes Development'§! from every owned §YSteppes§! province."
+ X_CRI_reform_4:0 "Organize Gerege Filing"
+ X_CRI_reform_4_title:0 "Organize Gerege Filing"
+ X_CRI_reform_4_emperor:0 "Organize Gerege Filing"
+ X_CRI_reform_4_desc:0 ""
+ X_CRI_reform_5:0 "Institute Qadiliq System"
+ X_CRI_reform_5_title:0 "Institute Qadiliq System"
+ X_CRI_reform_5_emperor:0 "Institute Qadiliq System"
+ X_CRI_reform_5_desc:0 ""
+ X_CRI_reform_6:0 "Harvest the Steppe"
+ X_CRI_reform_6_title:0 "Harvest the Steppe"
+ X_CRI_reform_6_desc:0 ""
+ X_CRI_reform_6_tt:0 "§WEvery owned province NOT of §YMuslim§! faith gains §Y'Heathen Slaves'§!, giving the following effects:\nLocal Manpower Modifier: §G+33.0%§!§!"
+ X_CRI_reform_6_tt2:0 "Remove §Y'Heathen Slaves'§! from every owned province NOT of §YMuslim§! faith."
+ X_CRI_reform_7:0 "Open Uluhane Bureaucracy"
+ X_CRI_reform_7_title:0 "Open Uluhane Bureaucracy"
+ X_CRI_reform_7_emperor:0 "Open Uluhane Bureaucracy"
+ X_CRI_reform_7_desc:0 ""
+ X_CRI_reform_8:0 "Unite the Tatars"
+ X_CRI_reform_8_title:0 "Unite the Tatars"
+ X_CRI_reform_8_emperor:0 "Unite the Tatars"
+ X_CRI_reform_8_desc:0 ""
+ X_CRI_reform_8_tt:0 "§WCountry changes to §Y[GLH.GetName]§!.\nIf our Government Rank is less than §YEmpire§!, the Government Rank of §Y[GLH.GetName]§! changes to §YEmpire§!.\nThe event '§YNew Traditions & Ambitions§!' happens.\n§Y[GLH.GetName]§! gains a permanent claim on all §YTatar§! provinces.§!"
+ #Event Modifiers
+ X_CRI_reform_2_pmod:0 "Steppes Development"
+ desc_X_CRI_reform_2_pmod:0 ""
+ X_CRI_reform_3_pmod:0 "Heathen Slaves"
+ desc_X_CRI_reform_3_pmod:0 ""
+ #Triggered Modifiers
+ X_CRI_control_of_sarai_tmod:0 "Control of Sarai"
+ desc_X_CRI_control_of_sarai_tmod:0 ""
