--- a/localisation/gecko_diplomatic_actions_l_english.yml
+++ b/localisation/gecko_diplomatic_actions_l_english.yml
@@ -29,3 +29,4 @@
   sm_tooltip_polmosally:0 "We cannot ally the Grand Principality of Muscovy."
   gc_truce_with_ally:0 "Recently broke alliance with this nation."
   gc_knights:0 "The Knights are better off alone."
+  gc_naples:0 "We cannot ally the Kingdom of Naples"
