--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -227,11 +227,11 @@
  X_CRI_reform_5_title:0 "Institute Qadiliq System"
  X_CRI_reform_5_emperor:0 "Institute Qadiliq System"
  X_CRI_reform_5_desc:0 ""
- X_CRI_reform_6:0 "Harvest the Steppe"
- X_CRI_reform_6_title:0 "Harvest the Steppe"
+ X_CRI_reform_6:0 "Conscipt Christian Slaves"
+ X_CRI_reform_6_title:0 "Conscipt Christian Slaves"
  X_CRI_reform_6_desc:0 ""
- X_CRI_reform_6_tt:0 "§WEvery owned province NOT of §YMuslim§! faith gains §Y'Heathen Slaves'§!, giving the following effects:\nLocal Manpower Modifier: §G+33.0%§!§!"
- X_CRI_reform_6_tt2:0 "Remove §Y'Heathen Slaves'§! from every owned province NOT of §YMuslim§! faith."
+ X_CRI_reform_6_tt:0 "§WEvery owned province of §YChristian§! faith gains §Y'Heathen Slaves'§!, giving the following effects:\nLocal Manpower Modifier: §G+33.0%§!§!"
+ X_CRI_reform_6_tt2:0 "Remove §Y'Heathen Slaves'§! from every owned province of §YChristian§! faith."
  X_CRI_reform_7:0 "Open Uluhane Bureaucracy"
  X_CRI_reform_7_title:0 "Open Uluhane Bureaucracy"
  X_CRI_reform_7_emperor:0 "Open Uluhane Bureaucracy"
@@ -244,8 +244,20 @@
  #Event Modifiers
  X_CRI_reform_2_pmod:0 "Steppes Development"
  desc_X_CRI_reform_2_pmod:0 ""
- X_CRI_reform_3_pmod:0 "Heathen Slaves"
- desc_X_CRI_reform_3_pmod:0 ""
- #Triggered Modifiers
- X_CRI_control_of_sarai_tmod:0 "Control of Sarai"
- desc_X_CRI_control_of_sarai_tmod:0 ""
+ X_CRI_reform_6_pmod:0 "Heathen Slaves"
+ desc_X_CRI_reform_6_pmod:0 ""
+ #CB, Peace Treaties, & War Goals
+ X_CRI_cb_1:0 "Crush the Tatar Yoke"
+ X_CRI_cb_1_desc:0 ""
+ X_CRI_war_name_1:0 "$ORDER$$FIRST$-$SECOND$ War of Control"
+ X_CRI_war_goal_1_desc:0 ""
+ CB_ALLOWED_X_CRI_peace_treaty_1:0 "Crush the Tatar Yoke"
+ PEACE_X_CRI_peace_treaty_1:0 "Crush the Tatar Yoke"
+ X_CRI_peace_treaty_1_desc:0 "Tradition of the Steppe's Legacy changes by §R-50.0§!£X_imperial_mandate£."
+ X_CRI_cb_2:0 "Harvest the Steppe"
+ X_CRI_cb_2_desc:0 ""
+ X_CRI_war_name_2:0 "$ORDER$$FIRST$ Raid of $SECOND_NAME$"
+ X_CRI_war_goal_2_desc:0 ""
+ CB_ALLOWED_X_CRI_peace_treaty_2:0 "Harvest the Steppe"
+ PEACE_X_CRI_peace_treaty_2:0 "Harvest the Steppe"
+ X_CRI_peace_treaty_2_desc:0 "Tradition of the Steppe's Legacy changes by §G+0.1§!£X_imperial_mandate£ per 1 development of the target nation, up to a maximum of §G+50.0§!£X_imperial_mandate£.\n- [Root.GetName] gains §G+100§!£icon_manpower£ and §Y1.0§!¤ per 1 development of the target nation."
