Mamluk missions tweaks

--- a/localisation/ME_Mamluks_l_english.yml
+++ b/localisation/ME_Mamluks_l_english.yml
@@ -107,6 +107,7 @@
  mamluks_secure_our_flank_modifier: "Secured our Flank"
  mamluks_disrupt_the_adriatic_modifier: "Disrupted the Adriatic"
  mamluks_shear_the_white_sheep_modifier: "The White Sheep"
+ mamluks_shear_the_black_sheep_modifier: "The Black Sheep"
  mamluks_between_the_rivers_modifier: "Between the Rivers"
  mamluks_between_the_rivers_province_modifier: "Developing Efforts"
  mamluks_restore_baghdad_modifier: "Restored Bagdad"
