--- a/localisation/ME_Poland_l_english.yml
+++ b/localisation/ME_Poland_l_english.yml
@@ -510,3 +510,4 @@
  
  PRU_do_not_integrate_me_title: "Be Not Afraid, this is for AI"
  PRU_do_not_integrate_me_desc: ":)"
+ LIT_employs_east_slavic: "§YEast Slavic§! Culture Group Advisor is currently employed."
