additional cultural unions + crimea error log fixes
All cultural unions for old world cultures completed except for Kongo, Irish, and Urals groups

--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -673,3 +673,78 @@
  desc_X_turko_semitic_culture_tier_10_cmod:0 "[GetXTurkoSemiticCultureEffect]"
  X_turko_semitic_culture_full_control_cmod:0 "Levantine Unity"
  desc_X_turko_semitic_culture_full_control_cmod:0 "[GetXTurkoSemiticCultureEffect]"
+ #cushitic
+ X_cushitic_culture_control_union_key:0 "This is the result of fully controlling §Y[Root.X_cushitic_variable.GetValue]%§! of all Cushitic cultures."
+ X_cushitic_culture_control_development_key:0 "This is the result of controlling §Y[Root.X_cushitic_variable.GetValue]%§! of all Cushitic development."
+ X_cushitic_culture_tier_1_cmod:0 "Cushitic Unity"
+ desc_X_cushitic_culture_tier_1_cmod:0 "[GetXCushiticCultureEffect]"
+ X_cushitic_culture_tier_2_cmod:0 "Cushitic Unity"
+ desc_X_cushitic_culture_tier_2_cmod:0 "[GetXCushiticCultureEffect]"
+ X_cushitic_culture_tier_3_cmod:0 "Cushitic Unity"
+ desc_X_cushitic_culture_tier_3_cmod:0 "[GetXCushiticCultureEffect]"
+ X_cushitic_culture_tier_4_cmod:0 "Cushitic Unity"
+ desc_X_cushitic_culture_tier_4_cmod:0 "[GetXCushiticCultureEffect]"
+ X_cushitic_culture_tier_5_cmod:0 "Cushitic Unity"
+ desc_X_cushitic_culture_tier_5_cmod:0 "[GetXCushiticCultureEffect]"
+ X_cushitic_culture_tier_6_cmod:0 "Cushitic Unity"
+ desc_X_cushitic_culture_tier_6_cmod:0 "[GetXCushiticCultureEffect]"
+ X_cushitic_culture_tier_7_cmod:0 "Cushitic Unity"
+ desc_X_cushitic_culture_tier_7_cmod:0 "[GetXCushiticCultureEffect]"
+ X_cushitic_culture_tier_8_cmod:0 "Cushitic Unity"
+ desc_X_cushitic_culture_tier_8_cmod:0 "[GetXCushiticCultureEffect]"
+ X_cushitic_culture_tier_9_cmod:0 "Cushitic Unity"
+ desc_X_cushitic_culture_tier_9_cmod:0 "[GetXCushiticCultureEffect]"
+ X_cushitic_culture_tier_10_cmod:0 "Cushitic Unity"
+ desc_X_cushitic_culture_tier_10_cmod:0 "[GetXCushiticCultureEffect]"
+ X_cushitic_culture_full_control_cmod:0 "Cushitic Unity"
+ desc_X_cushitic_culture_full_control_cmod:0 "[GetXCushiticCultureEffect]"
+ #southern_african
+ X_southern_african_culture_control_union_key:0 "This is the result of fully controlling §Y[Root.X_southern_african_variable.GetValue]%§! of all Southern African cultures."
+ X_southern_african_culture_control_development_key:0 "This is the result of controlling §Y[Root.X_southern_african_variable.GetValue]%§! of all Southern African development."
+ X_southern_african_culture_tier_1_cmod:0 "Southern African Unity"
+ desc_X_southern_african_culture_tier_1_cmod:0 "[GetXSouthernAfricanCultureEffect]"
+ X_southern_african_culture_tier_2_cmod:0 "Southern African Unity"
+ desc_X_southern_african_culture_tier_2_cmod:0 "[GetXSouthernAfricanCultureEffect]"
+ X_southern_african_culture_tier_3_cmod:0 "Southern African Unity"
+ desc_X_southern_african_culture_tier_3_cmod:0 "[GetXSouthernAfricanCultureEffect]"
+ X_southern_african_culture_tier_4_cmod:0 "Southern African Unity"
+ desc_X_southern_african_culture_tier_4_cmod:0 "[GetXSouthernAfricanCultureEffect]"
+ X_southern_african_culture_tier_5_cmod:0 "Southern African Unity"
+ desc_X_southern_african_culture_tier_5_cmod:0 "[GetXSouthernAfricanCultureEffect]"
+ X_southern_african_culture_tier_6_cmod:0 "Southern African Unity"
+ desc_X_southern_african_culture_tier_6_cmod:0 "[GetXSouthernAfricanCultureEffect]"
+ X_southern_african_culture_tier_7_cmod:0 "Southern African Unity"
+ desc_X_southern_african_culture_tier_7_cmod:0 "[GetXSouthernAfricanCultureEffect]"
+ X_southern_african_culture_tier_8_cmod:0 "Southern African Unity"
+ desc_X_southern_african_culture_tier_8_cmod:0 "[GetXSouthernAfricanCultureEffect]"
+ X_southern_african_culture_tier_9_cmod:0 "Southern African Unity"
+ desc_X_southern_african_culture_tier_9_cmod:0 "[GetXSouthernAfricanCultureEffect]"
+ X_southern_african_culture_tier_10_cmod:0 "Southern African Unity"
+ desc_X_southern_african_culture_tier_10_cmod:0 "[GetXSouthernAfricanCultureEffect]"
+ X_southern_african_culture_full_control_cmod:0 "Southern African Unity"
+ desc_X_southern_african_culture_full_control_cmod:0 "[GetXSouthernAfricanCultureEffect]"
+ #mande
+ X_mande_culture_control_union_key:0 "This is the result of fully controlling §Y[Root.X_mande_variable.GetValue]%§! of all Mande cultures."
+ X_mande_culture_control_development_key:0 "This is the result of controlling §Y[Root.X_mande_variable.GetValue]%§! of all Mande development."
+ X_mande_culture_tier_1_cmod:0 "Mande Unity"
+ desc_X_mande_culture_tier_1_cmod:0 "[GetXMandeCultureEffect]"
+ X_mande_culture_tier_2_cmod:0 "Mande Unity"
+ desc_X_mande_culture_tier_2_cmod:0 "[GetXMandeCultureEffect]"
+ X_mande_culture_tier_3_cmod:0 "Mande Unity"
+ desc_X_mande_culture_tier_3_cmod:0 "[GetXMandeCultureEffect]"
+ X_mande_culture_tier_4_cmod:0 "Mande Unity"
+ desc_X_mande_culture_tier_4_cmod:0 "[GetXMandeCultureEffect]"
+ X_mande_culture_tier_5_cmod:0 "Mande Unity"
+ desc_X_mande_culture_tier_5_cmod:0 "[GetXMandeCultureEffect]"
+ X_mande_culture_tier_6_cmod:0 "Mande Unity"
+ desc_X_mande_culture_tier_6_cmod:0 "[GetXMandeCultureEffect]"
+ X_mande_culture_tier_7_cmod:0 "Mande Unity"
+ desc_X_mande_culture_tier_7_cmod:0 "[GetXMandeCultureEffect]"
+ X_mande_culture_tier_8_cmod:0 "Mande Unity"
+ desc_X_mande_culture_tier_8_cmod:0 "[GetXMandeCultureEffect]"
+ X_mande_culture_tier_9_cmod:0 "Mande Unity"
+ desc_X_mande_culture_tier_9_cmod:0 "[GetXMandeCultureEffect]"
+ X_mande_culture_tier_10_cmod:0 "Mande Unity"
+ desc_X_mande_culture_tier_10_cmod:0 "[GetXMandeCultureEffect]"
+ X_mande_culture_full_control_cmod:0 "Mande Unity"
+ desc_X_mande_culture_full_control_cmod:0 "[GetXMandeCultureEffect]"
