--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -20,8 +20,8 @@
  enlist_rajputs_desc:0 "Rajputs, one of the 4 Varnas of our society, have always led the political authority of the preceding states in the region. Though their religions are numerous thanks to the missionary works of Muslim Traders and Therevada Buddhists, their ancestral tribes and ties still bind them to one another. Let us ignore their religious differences and instead fuel our armies with this warrior class."
  crimea_form_the_hetmanate_title:0 "Unite the Steppes"
  crimea_form_the_hetmanate_desc:0 "Centuries ago our Great Father united our ancestors in their ancient homeland. He died leaving his sons to squabble and split his mighty empire into petty fiefs, small, weak and unworthy of his legacy! The disjointed remnants still sweep across the steppes instilling fear in the hearts of his enemies just like the Great Mongol army once did.\nNo more! A worthy people still carrying the banner of his legacy ride across these lands! While we now bow before a new God, the blood of Genghis Khan still flows through our veins. We are the heirs of Genghis and we are coming for what is rightfully ours!"
- gc_war_taxes_notification_title:0 "WAR TAXES ARE ON!"
- gc_war_taxes_notification_desc:0 "You're using War Taxes. You might want to deactivate them."
+ gc_war_taxes_notification_title:0 "§R§ WAR TAXES ARE ON! §W"
+ gc_war_taxes_notification_desc:0 "You are paying War Taxes. You might want to deactivate them."
  great_zimbabwe_title:0 "Proclaim Great Zimbabwe"
  great_zimbabwe_desc:0 "We must unite East Africa and proclaim Great Zimbabwe."
  free_colonist_title:0 "Settle the World"
@@ -35,10 +35,10 @@
  sm_hire_recruitmaster_desc:0 "It would be wise to use the foreign expertise available to us to help bring fresh manpower into our ranks."
  sm_hire_naval_reformer_title:0 "§L§ Hire a Naval Reformer §W"
  sm_hire_naval_reformer_desc:0 "Hire a naval expert to reform our navies."
- PR_manpower_edict_title:0 "§R§ National Manpower Edict §W"
+ PR_manpower_edict_title:0 "§M§ National Manpower Edict §W"
  PR_manpower_edict_desc:0 "Activate a manpower edict modifier in all states without an activated edict. No edicts can be applied to states with this modifier. Can be removed in 1 year."
  PR_manpower_edict_tooltip:0 "+§Y25%§! Manpower and +§R200%§! State Maintenance in all states without an active edict"
- PR_manpower_edict_removal_title:0 "§R§ Deactivate National Manpower Edict §W"
+ PR_manpower_edict_removal_title:0 "§M§ Deactivate National Manpower Edict §W"
  PR_manpower_edict_removal_desc:0 "Removes manpower edict modifier from all provinces."
  PR_manpower_edict_cooldown:0 "Provincial Manpower Edict"
  PR_manpower_edict_removal_tooltip:0 "Has been 1 year since activating National Manpower Edict."
