Subjects may not be declared on while their overlord is in war with the declaring nation. X monuments adjusted to match upgrade costs of all other monuments..

--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -295,6 +295,8 @@
  X_CRI_events.4.a:0 "Our failure exacts a heavy toll"
  #Event Tooltips
  X_CRI_event_2_tt:0 "§Y[Root.GetName]§! gains a permanent claim on all §YTatar§! provinces.§!"
+ #Diplomatic Actions
+ X_war_with_overlord_tt:0 "§RYou cannot declare on a subject of a nation, if you are already at war with that nation.§!"
  ####################
  # Tiered Modifiers
  ####################
