--- a/localisation/gecko_privileges_l_english.yml
+++ b/localisation/gecko_privileges_l_english.yml
@@ -8,8 +8,8 @@
 
  ###nomad estate changes###
  estate_nomadic_tribes_steppes_devcost:0 "Settle the Steppes"
- estate_nomadic_tribes_steppes_devcost_grant_tooltip:0 "Every owned province of §YSteppes§! terrain gains §Y'Settle the Steppes'§!, giving the following effects:\nLocal Development Cost: §G-5.0%§!\nLocal Production Efficency: §G+15.0%§!"
- estate_nomadic_tribes_steppes_devcost_revoke_tooltip:0 "Remove §Y'Settle the Steppes'§! from every owned §YSteppes§! province."
+ estate_nomadic_tribes_steppes_devcost_grant_tooltip:0 "Every owned province of §YSteppes§! terrain gains '§YSettle the Steppe§!', giving the following effects:\nLocal Development Cost: §G-5.0%§!\nLocal Production Efficency: §G+15.0%§!"
+ estate_nomadic_tribes_steppes_devcost_revoke_tooltip:0 "Remove '§YSettle the Steppes§!' from every owned §YSteppes§! province."
  estate_nomadic_tribes_share_of_the_spoils:0 "Settle the Steppes"
  estate_nomadic_tribes_chieftains_autonomy:0 "Greater Autonomy for Chieftains"
  estate_nomadic_tribes_guaranteed_leadership_in_host:0 "Guaranteed Leadership of Host"
