Preparations for Crimean mission tree. Dhimmi added. Looting changed.

--- a/localisation/gecko_areas_regions_l_english.yml
+++ b/localisation/gecko_areas_regions_l_english.yml
@@ -42,9 +42,9 @@ krain_area_adj:0 "Krainian"
 torino_area:0 "Torino"
 torino_area_name:0 "Torino"
 torino_area_adj:0 "Torini"
-simferopol_area:0 "Simferopol"
-simferopol_area_name:0 "Simferopol"
-simferopol_area_adj:0 "Simferopolian"
+gazaria_area:0 "Gazaria"
+gazaria_area_name:0 "Gazaria"
+gazaria_area_adj:0 "Gazarian"
 odessa_area:0 "Odessa"
 odessa_area_name:0 "Odessa"
 odessa_area_adj:0 "Odessian"
