--- a/localisation/gecko_prov_ADJ_l_english.yml
+++ b/localisation/gecko_prov_ADJ_l_english.yml
@@ -71,7 +71,7 @@
  #PROV_ADJ5787:0 "Piacenza"
  PROV_ADJ6000:0 "Kerchan"
  PROV_ADJ6001:0 "Kezlevian"
- PROV_ADJ6002:0 "Cankoyian"
+ PROV_ADJ6002:0 "Or Qapian"
  PROV_ADJ6003:0 "Khersonian"
  PROV_ADJ6004:0 "Kakhovkan"
  PROV_ADJ6005:0 "Nikopola"
