--- a/localisation/gecko_prov_names_l_english.yml
+++ b/localisation/gecko_prov_names_l_english.yml
@@ -102,7 +102,7 @@
  #PROV5787:0 "Piacenza"
  PROV6000:0 "Kerch"
  PROV6001:0 "Kezlev"
- PROV6002:0 "Cankoy"
+ PROV6002:0 "Or Qapi"
  PROV6003:0 "Kherson"
  PROV6004:0 "Kakhovka"
  PROV6005:0 "Nikopol"
