--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -1,5 +1,37 @@
 ﻿l_english:
  ####################
+ # Estates
+ ####################
+ #Privileges
+ X_estate_cossacks_privilege_1:0 "Establish Cossack Border Guards"
+ X_estate_cossacks_privilege_1_desc:0 ""
+ X_estate_cossacks_privilege_2:0 "Hire Cossack Raiders"
+ X_estate_cossacks_privilege_2_desc:0 ""
+ #Tooltips
+ X_estate_cossacks_privilege_1_on_granted_tt:0 "Every owned province of §lFlatland§! terrain in the §YRuthenia§! region or §YSteppes§! terrain with a §YFort§! gains '§YCossack Border Defense§!', giving the following effects:\nLocal Defensiveness: §G+20.0%§!"
+ X_estate_cossacks_privilege_1_on_revoked_tt:0 "Remove '§YCossack Border Defense§!' from every owned province of §lFlatland§! terrain in the §YRuthenia§! region or §YSteppes§! terrain with a §YFort§!."
+ X_estate_cossacks_privilege_2_on_granted_tt:0 "Cossack raiders will sporadically raid our Heathen neighbors, plundering their wealth."
+ X_estate_cossacks_privilege_2_on_revoked_tt:0 "Cossack raiders will no longer raid our Heathen neighbors."
+ X_cossack_raid_tt:0 "The §Y[x_estate_cossacks_privilege_2_country_event_target.GetAdjective]§! Cossacks looted §Y[Root.X_cossack_raid_total_development_localization_variable.GetValue]§!¤ from our treasury."
+ X_cossack_raid_tt2:0 "[From.GetXCossackLootAmountTT]"
+ #Modifiers
+ X_estate_cossacks_privilege_1_pmod:0 "Cossack Border Defense"
+ desc_X_estate_cossacks_privilege_1_pmod:0 ""
+ X_estate_cossacks_privilege_2_pmod:0 "Cossack Raid"
+ desc_X_estate_cossacks_privilege_2_pmod:0 ""
+ X_estate_cossacks_sponsored_raid_lmod:0 "Sponsored Raid"
+ #Events
+ X_cossack_raid_loot_amount_zero:0 "A poor plunder"
+ X_cossack_raid_loot_amount_not_zero:0 "A plentiful plunder"
+ X_cossack_raid_loot_amount_zero_tt:0 "The §Y[From.GetAdjective]§! treasury was too poor to be looted for anything of value."
+ X_cossack_raid_loot_amount_not_zero_tt:0 "Our Cossacks successfully looted §Y[From.X_cossack_raid_total_development_localization_variable.GetValue]§!¤ from the §Y[From.GetAdjective]§! treasury."
+ X_estate_events.2.t:0 "[x_estate_cossacks_privilege_2_country_event_target.GetAdjective] Cossack Raid of [x_estate_cossacks_privilege_2_area_event_target.GetAreaName]"
+ X_estate_events.2.d1:0 ""
+ X_estate_events.2.a:0 "Barbarians!"
+ X_estate_events.3.t:0 "Cossack Raid of [From.GetName]"
+ X_estate_events.3.d1:0 ""
+ X_estate_events.3.a:0 "[From.GetXCossackLootAmount]"
+ ####################
  # Venice
  ####################
  #Missions
